--- a/webservice/templates/show_campaigns.html
+++ b/webservice/templates/show_campaigns.html
@@ -23,7 +23,7 @@ Campaigns
             <tr>
                 <th>Campaign Name </th>
                 <th>Submissions Running</th>
-                <th data-sorter="false" data-filter="false">Submissions</th>
+                <th data-sorter="false" data-filter="false">Submission History</th>
                 <th data-sorter="false" data-filter="false">Dependencies</th>
                 <th data-sorter="false" data-filter="false">Edit Workflow</th>
                 <th data-sorter="false" data-filter="false">Clone Workflow</th>
@@ -39,33 +39,33 @@ Campaigns
                 <td>
                     <a href="{{pomspath}}/campaign_time_bars?tag={{s.tag_name}}&tdays=7&tmax={{last_activity}}">
                         <button type="button">
-                        <i class="submissions icon"></i>Submissions
+                        <i class="chart line icon"></i>
                         </button>
                     </a>
                 </td>
                 <td>
                     <a href="{{pomspath}}/campaign_deps?tag={{s.tag_name}}">
                         <button type="button">
-                            <i class="sitemap icon"></i>Dependencies
+                            <i class="sitemap icon"></i>
                         </button>
                     </a>
                 </td>
                 <td>
                     <a href="{{pomspath}}/gui_wf_edit?campaign={{s.tag_name}}">
                         <button type="button">
-                            <i class="file icon"></i>Edit Workflow
+                            <i class="edit icon"></i>
                         </button>
                     </a>
                 </td>
                 <td>
                     <button type="button" onclick="clone_template('{{s.tag_name}}');">
-                        <i class="copy blue icon"></i>Clone Workflow
+                        <i class="copy blue icon"></i>
                     </button>
                 </td>
                 <td>
                     <a href="{{pomspath}}/campaign_deps_ini?tag={{s.tag_name}}">
                         <button type="button">
-                            <i class="file icon"></i>Workflow ini
+                            <i class="list icon"></i>
                         </button>
                     </a>
                 </td>
