--- a/webservice/templates/layout.html
+++ b/webservice/templates/layout.html
@@ -92,19 +92,21 @@
 
       {% endif %}
 
-      <div class="article" style="padding-left: 1em; padding-top: 1em">  <!--header of page-->
-	<br/>
-	<div class="ui three column grid">
+      <div class="article" style="padding-left: 1em; padding-top: 1em">  <!-- header of page-->
+
+	<div class="ui three column middle aligned grid">
 	  <div class="row">
-	    <div class="ten wide column">
-	      <h1 class="ui header" style="margin: 0px 10px 0px 10px;">
-		      {%block header%} {%endblock%}
-	      </h1>
-	      {%block header_desc%}{%endblock%}
-	      <h2 class="ui header" style="margin: 0px 10px 0px 10px;">
-		      {%block subheader%} {%endblock%}
-	      </h2>
-	    </div>
+	    <div class="column">
+          <img class="ui small image" src="{{pomspath}}/static/img/poms.jpg">
+      </div>
+      <div class="column">
+        <h2>
+            {%block header%} {%endblock%}
+        </h2>
+        <h3>
+            {%block subheader%} {%endblock%}
+        </h3>
+      </div>
 	    <div class="column">
         <br>
         {% if current_experimenter is defined %}
@@ -133,10 +135,12 @@
 	<div class="no example" style="margin: 0px 10px 0px 10px;">
 	  {%block content%} {%endblock%}
 	</div>
-      </div>  <!--ends article-->
+  {%block final%} {%endblock%}
+</div>  <!--ends article-->
 
     </div> <!--ends full height-->
   </div>  <!--ends pusher-->
+
 
 
 <script>
@@ -188,8 +192,6 @@
 
 </script>
 
-
-{%block final%} {%endblock%}
 </body>
 
 </html>
