open call to fifemon in new tab

--- a/webservice/templates/standard_menu.html
+++ b/webservice/templates/standard_menu.html
@@ -81,7 +81,7 @@
       <a class="item" href="{{pomspath}}/campaign_edit">
         Compose Campaign Stages
       </a>
-      <a class="item" href="https://cdcvs.fnal.gov/redmine/projects/prod_mgmt_db/wiki/LaunchConfigFileTemplates">
+      <a class="item" target="_blank" href="https://cdcvs.fnal.gov/redmine/projects/prod_mgmt_db/wiki/LaunchConfigFileTemplates">
         Config File Templates
       </a>
     </div>
