open fifemon in new tab

--- a/webservice/templates/campaign_time_bars.html
+++ b/webservice/templates/campaign_time_bars.html
@@ -54,7 +54,7 @@ POMS:Campaign Stage {{name}}
 
                       {% for p in plist %}
 
-                        <a href='{{p.url}}'>
+                        <a target="_blank" href='{{p.url}}'>
                           <div class='tbox' data-content='{{p.txt}}' data-variation="very wide" style='width: {{p.width}}%; background-color: {{p.color}} !important; float:left; '>
                             &nbsp;
                           </div>
