--- a/webservice/templates/layout.html
+++ b/webservice/templates/layout.html
@@ -103,9 +103,6 @@
         <h2>
             {%block header%} {%endblock%}
         </h2>
-        <h3>
-            {%block subheader%} {%endblock%}
-        </h3>
       </div>
 	    <div class="column">
         <br>
@@ -130,7 +127,16 @@
 	  </div>
 	</div>
 	<div class="ui divider"  style="margin-top: 0px;">
-	</div>
+      <div class="ui three column middle aligned grid" style="margin-top: 5px;">
+        <div class="column"></div>
+        <div class="column">
+          <h3>
+            {%block subheader%} {%endblock%}
+          </h3>
+        </div>
+        <div class="column"></div>
+    </div>
+  </div>
 	{% include 'datepicker_block.html' %}
 	<div class="no example" style="margin: 0px 10px 0px 10px;">
 	  {%block content%} {%endblock%}
