--- a/webservice/templates/search_tags.html
+++ b/webservice/templates/search_tags.html
@@ -7,39 +7,27 @@ POMS Campaign Query Results
 {%block header%}
 <h1 class="ui header">
          Campaign Query Results {%include 'help_button.html'%}
-
-          <div class="sub header">
-              view all Campaign Stages belonging to this Campaign/CampaignStage
-          </div>
 </h1>
 {%endblock%}
-
-
-
-
 {%block subheader%}
-<h2 class="ui dividing header">Campaign Query Results: {% for item in q_list %} <div class="ui blue label">{{item}}</div> {% endfor %}</h2>
+Search Term: {{search_term}}
 {%endblock%}
 
-
-
 {%block content %}
+<div class="ui hidden divider"></div>
 <table class="ui sortable celled table">
   <thead>
     <tr>
-      <th class="">Campaign Stage Name</th>
-      <th class="">Experiment</th>
+      <th class="">Campaign Name</th>
+      <th class="">Campaign Stage name</th>
     </tr>
   </thead>
 
-
-
   <tbody>
-
   {% for row in results %}
   <tr>
-      <td><a href="{{pomspath}}/campaign_info?campaign_stage_id={{row.campaign_stage_id}}">{{row.name}}</a></td>
-      <td>{{row.experiment}}</td>
+      <td>{{row.Campaign.tag_name}}</td>
+      <td><a href="{{pomspath}}/campaign_info?campaign_stage_id={{row.campaign_stage_id}}">{{row.CampaignStage.name}}</a></td>
   </tr>
   {% endfor %}
 
