--- a/webservice/templates/standard_menu.html
+++ b/webservice/templates/standard_menu.html
@@ -4,16 +4,15 @@
 <div class="ui vertical menu">
 
   <a class="active item"href="{{pomspath}}/">
-    <div class="ui image label">
-      <i class="rocket icon"></i>
+    <div class="ui float left">
+    <i class="large black home icon"><b>&nbsp;POMS</b></i>
     </div>
-    <b>POMS</b>
   </a>
 
   <div class="item">
     <div class="ui icon input">
       <form action="{{pomspath}}/quick_search" style="width: 99%">
-       <input type="text" name="search_term" placeholder="Search..." style="width: 95%">
+       <input type="text" name="search_term" placeholder="Campaign Search..." style="width: 95%">
       <button type="submit" style="border:none; background-color:transparent; margin-left: -2.5em; height: 1.5em;">
          <i class="ui icon search"></i>
       </button>
