minor added br in heading

--- a/webservice/templates/show_campaigns.html
+++ b/webservice/templates/show_campaigns.html
@@ -22,7 +22,7 @@ Campaigns {%include 'help_button.html'%}
         <thead>
             <tr>
                 <th>Campaign Name </th>
-                <th>Submissions Running</th>
+                <th>Submissions<br>Running</th>
                 <th data-sorter="false" data-filter="false">Submission<br>History</th>
                 <th data-sorter="false" data-filter="false">Dependencies</th>
                 <th data-sorter="false" data-filter="false">Edit<br>Workflow</th>
