minor text change

--- a/webservice/templates/index.html
+++ b/webservice/templates/index.html
@@ -181,13 +181,13 @@ Job Launches: {{launches}}
         </div>
         <a target="_blank" href="https://fifemon.fnal.gov/monitor/d/000000122/sam-by-experiment?from=now-24h&to=now-5m&orgId=1&var-experiment={{session_experiment}}">
             <div class="ui bottom attached button">
-                Sam Status (Fifemon)
+                Status
                 <i class="large share icon"></i>
             </div>
         </a>
         <a target="_blank" href="http://samweb.fnal.gov:8480/sam_web_registry/{{session_experiment}}/prd/">
             <div class="ui bottom attached button">
-                Sam Registry
+                Registry
                 <i class="large share icon"></i>
             </div>
         </a>
