--- a/webservice/templates/gui_wf_edit.html
+++ b/webservice/templates/gui_wf_edit.html
@@ -7,6 +7,17 @@
 <script src="{{pomspath}}/static/js/json_field_editor.js"></script>
 <link rel="stylesheet" type="text/css" href="{{pomspath}}/static/css/gui_editor_3.css">
 <link rel="stylesheet" type="text/css" href="{{pomspath}}/static/css/json_field_editor.css">
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.js"></script>
+<link href="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.css" rel="stylesheet" type="text/css">
+
+<style type="text/css">
+        #outer_gui_editor_frame {
+            width: 1000px;
+            height: 600px;
+            border: 1px solid lightgray;
+        }
+</style>
+
 {%endblock%}
 
 {%block bodytags%} onload="main()" {%endblock%}
@@ -28,7 +39,7 @@
 {%block content %}
 
 <!-- <div id="outer_gui_editor_frame" style="width:100%; height: 40em; border: 1px solid grey; padding: 1em; overflow-x:scroll; overflow-y: scroll"> -->
-<div id="outer_gui_editor_frame">
+<div id="outer_gui_editor_frame" oncontextmenu='return false;' contextmenu="">
 </div>
 
 <script type="text/javascript">
