--- a/webservice/templates/gui_wf_edit.html
+++ b/webservice/templates/gui_wf_edit.html
@@ -24,11 +24,11 @@
 
 {%block header%}
 <h1 class="ui header">
-          Workflow Editor for {{campaign}} {%include 'help_button.html'%}
+    Workflow Editor for {{campaign}} {%include 'help_button.html'%}
 
-          <div class="sub header">
-               Edit whole workflow
-          </div>
+    <div class="sub header">
+        Edit whole workflow
+    </div>
 </h1>
 {%endblock%}
 
@@ -39,8 +39,13 @@
 {%block content %}
 
 <!-- <div id="outer_gui_editor_frame" style="width:100%; height: 40em; border: 1px solid grey; padding: 1em; overflow-x:scroll; overflow-y: scroll"> -->
-<div id="outer_gui_editor_frame" oncontextmenu='return false;' contextmenu="">
-</div>
+<h3>Campaign Default Values</h3>
+<div id="mydefaults" oncontextmenu='return false;' contextmenu=""></div>
+<h3>Campaign Stages</h3>
+<div id="outer_gui_editor_frame" oncontextmenu='return false;' contextmenu=""></div>
+<h3>Campaign Login/Setup and Jobtypes</h3>
+<div id="myjobtypes" oncontextmenu='return false;' contextmenu=""></div>
+<pre id="eventSpan"></pre>
 
 <script type="text/javascript">
 
