--- a/webservice/templates/gui_wf_edit.html
+++ b/webservice/templates/gui_wf_edit.html
@@ -16,6 +16,12 @@
             height: 600px;
             border: 1px solid lightgray;
         }
+
+        #mydefaults, #myjobtypes {
+            width: 1000px;
+            height: 100px;
+            border: 1px solid lightgray;
+        }
 </style>
 
 {%endblock%}
