--- a/webservice/templates/gui_wf_edit.html
+++ b/webservice/templates/gui_wf_edit.html
@@ -10,20 +10,6 @@
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.js"></script>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/vis/4.21.0/vis.min.css" rel="stylesheet" type="text/css">
 
-<style type="text/css">
-        #outer_gui_editor_frame {
-            width: 1000px;
-            height: 600px;
-            border: 1px solid lightgray;
-        }
-
-        #mydefaults, #myjobtypes {
-            width: 1000px;
-            height: 100px;
-            border: 1px solid lightgray;
-        }
-</style>
-
 {%endblock%}
 
 {%block bodytags%} onload="main()" {%endblock%}
@@ -43,6 +29,45 @@
 {%endblock%}
 
 {%block content %}
+
+<div id="node-popUp">
+    <span id="node-operation">node</span>
+    <br>
+    <table style="margin:auto;">
+        <tr>
+            <td>id</td>
+            <td> <input id="node-id" value="new value"> </td>
+        </tr>
+        <tr>
+            <td>label</td>
+            <td> <input id="node-label" value="new value"> </td>
+        </tr>
+    </table>
+    <input type="button" value="save" id="node-saveButton">
+    <input type="button" value="cancel" id="node-cancelButton">
+</div>
+
+<div id="edge-popUp">
+    <span id="edge-operation">edge</span>
+    <br>
+    <table style="margin:auto;">
+        <tr>
+            <td>label</td>
+            <td> <input id="edge-label" value="new value"> </td>
+        </tr>
+    </table>
+    <input type="button" value="save" id="edge-saveButton">
+    <input type="button" value="cancel" id="edge-cancelButton">
+</div>
+
+<form id="popup_depform" __style="display: block; top: 350px; left: 270px;">
+    <h3>dependency for mvi_merge_triga</h3>
+    <label>file_pattern</label>
+    <input value="" placeholder="default">
+    <br>
+    <input type="button" value="save" style="width: 8em;" onclick="document.getElementById('popup_depform').style.display='none';">
+    <input type="button" value="cancel" style="width: 8em;" onclick="document.getElementById('popup_depform').style.display='none';">
+</form>
 
 <!-- <div id="outer_gui_editor_frame" style="width:100%; height: 40em; border: 1px solid grey; padding: 1em; overflow-x:scroll; overflow-y: scroll"> -->
 <h3>Campaign Default Values</h3>
